<resources>
    <string name="app_name">Meditation Counter</string>
    <string name="label_namaste"> &#x1F64F;&#x1F3FB; Namaste  &#x1F64F;&#x1F3FB; </string>
    <string name="label_add_japa">Add New Japa</string>
    <string name="label_japa_list">My Japas</string>
    <string name="namaste_emoji">&#x1F64F;&#x1F3FB;</string>
    <string name="label_new_japa">New Japa</string>
    <string name="label_save">Save</string>
    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_mark_complete">Mark Completed</string>
    <string name="label_delete">Delete</string>
    <string name="label_update">Update</string>
    <string name="label_deduct">Deduct</string>

    <string name="hint_japa_name">Japa Name</string>
    <string name="hint_goal">Goal</string>
    <string name="hint_new_value">The value to be added to or deducted from your current count</string>
    <string name="label_current_count">Current Count</string>
    <string name="label_last_updated_time">Last updated Time</string>
    <string name="label_last_updated_value">Last Updated Value</string>
    <string name="label_counts">counts</string>
    <string name="label_status">Status</string>
    <string name="label_target">Target</string>
    <string name="label_yes">Yes</string>
    <string name="label_okay">Ok</string>

    <string name="label_goal_description">(Goal is the number of Japas You are targeting to complete)</string>

    <string name="error_name_empty">Japa name cannot be empty</string>

    <string name="warning_title">Are you Sure ?</string>
    <string name="warning_update_counter_message">You want to update count</string>
    <string name="warning_complete_japa">You want to mark this Japa as Completed</string>
    <string name="warning_delete_japa">You want to delete this Japa Permanently</string>

    <string name="msg_japa_added">New Japa Added Successfully</string>
    <string name="msg_japa_counter_updated">Updated Japa Count Successfully</string>
    <string name="msg_japa_completed">Congratulations! Your Japa has been successfully completed.</string>
    <string name="msg_japa_delete">%s has been deleted</string>

    <string name="err_msg_failure_action">Something went wrong..please try again</string>

</resources>