<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_margin"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_update"
        android:textColor="@color/orange"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgCancel"
        android:src="@drawable/ic_baseline_cancel_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_current_count"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/bg_rounded_corner_border_4dp"
        android:padding="@dimen/standard_margin"
        android:text="@string/label_current_count"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_current_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_current_count"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_current_count" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_new_value"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/standard_margin_2x"
        android:background="@drawable/bg_rounded_corner_border_4dp"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text"
        android:inputType="phone"
        android:padding="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_current_count" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_new_value_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_new_value"
        android:textColor="@color/input_text_color"
        android:textSize="@dimen/small_text"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_value" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:backgroundTint="@color/purple_700"
        android:padding="@dimen/padding_8dp"
        android:text="@string/label_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text"
        app:cornerRadius="@dimen/corner_radius"
        android:layout_marginHorizontal="@dimen/standard_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_value_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/padding_8dp"
        android:text="@string/label_deduct"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text"
        app:cornerRadius="@dimen/corner_radius"
        android:layout_marginHorizontal="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_value_hint" />


</androidx.constraintlayout.widget.ConstraintLayout>