<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_japa_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/label_japa_list" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/japa_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/zero_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_japa_name"
        app:strokeColor="@color/button_border"
        app:strokeWidth="@dimen/border_width">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_target"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_8dp"
                android:background="@drawable/bg_rounded_corner_border_4dp"
                android:gravity="center"
                android:inputType="phone"
                android:padding="@dimen/padding_8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_goal"
                tools:text="10000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_current_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:gravity="center"
                android:text="@string/label_current_count"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_goal" />

            <LinearLayout
                android:id="@+id/layout_current_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_current_count">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/img_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_minus_circle_outline_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_current_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_8dp"
                    android:layout_marginTop="@dimen/sub_item_vertical_margin"
                    android:background="@drawable/bg_rounded_corner_border_4dp"
                    android:gravity="center"
                    android:inputType="phone"
                    android:padding="@dimen/padding_8dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standard_text"
                    android:textStyle="bold"
                    tools:text="1000" />

                <ImageButton
                    android:id="@+id/img_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_plus_circle_outline" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_last_updated_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:gravity="center"
                android:text="@string/label_last_updated_value"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_current_count" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_last_updated_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_last_updated_value"
                tools:text="+1000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_last_updated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:gravity="center"
                android:text="@string/label_last_updated_time"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_last_updated_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_last_updated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_last_updated_time"
                tools:text="02 may 2024 13:50" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_current_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:gravity="center"
                android:text="@string/label_status"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_last_updated_time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_current_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_current_status"
                tools:text="ACTIVE" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/action_sub_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/japa_info_card">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8dp"
            android:backgroundTint="@color/orange"
            android:padding="@dimen/standard_margin"
            android:text="@string/label_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_8dp"
            android:backgroundTint="@color/red"
            android:padding="@dimen/standard_margin"
            android:text="@string/label_delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMarkComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:backgroundTint="@color/purple_700"
            android:padding="@dimen/standard_margin"
            android:text="@string/label_mark_complete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="1dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>